# django-mpesa

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
django_mpesa/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  urls.py  validators.py  views.py
django_mpesa/client/: __init__.py  auth.py  base.py  http.py
django_mpesa/management/commands/: mpesa_check_config.py
django_mpesa/services/: __init__.py  account_balance.py  b2c.py  c2b.py  reversal.py  stk_push.py  transaction_status.py
django_mpesa/testing/: __init__.py  factories.py  fixtures.py  mock_client.py
docs/: callbacks.md  index.md  models.md  quickstart.md  security.md  settings.md  signals.md  testing.md
docs/services/: account_balance.md  b2c.md  c2b.md  reversal.md  stk_push.md  transaction_status.md
plan/: django-mpesa-blueprint.md
specs/: design.md  requirements.md  tasks.md
tests/: conftest.py  settings.py  test_admin.py  test_conf.py  test_coverage_gaps.py  test_exceptions.py  test_idempotency.py  test_middleware.py  test_serializers.py  test_signals.py  test_validators.py  urls.py
tests/test_callbacks/: test_b2c_callbacks.py  test_c2b_callbacks.py  test_stk_callback.py
tests/test_client/: test_auth.py  test_base.py  test_http.py
tests/test_management/: test_check_config.py
tests/test_models/: test_abstract_models.py
tests/test_services/: test_b2c.py  test_c2b.py  test_remaining_services.py  test_stk_push.py
tests/test_testing/: test_factories.py  test_mock_client.py
tests/testapp/: apps.py  models.py
tests/testapp/migrations/: 0001_initial.py
