[project]
name = "mainfinity-django-mpesa"
version = "0.1.0"
description = "A production-hardened Django app for Safaricom's Daraja M-PESA API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["django", "mpesa", "safaricom", "daraja", "payments", "kenya"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "requests>=2.31",
]

[project.optional-dependencies]
celery = ["celery>=5.3"]
test = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "factory-boy>=3.3",
    "responses>=0.24",
]
docs = ["mkdocs-material>=9.4"]
dev = [
    "django-mpesa[celery,test,docs]",
    "pip-audit>=2.6",
    "ruff>=0.1",
    "mypy>=1.5",
    "tox>=4.0",
]

[project.urls]
Homepage = "https://github.com/mainfinity/django-mpesa"
Documentation = "https://django-mpesa.readthedocs.io"
Repository = "https://github.com/mainfinity/django-mpesa"
Issues = "https://github.com/mainfinity/django-mpesa/issues"
Changelog = "https://github.com/mainfinity/django-mpesa/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_mpesa"]

[tool.hatch.build.targets.sdist]
include = [
    "django_mpesa/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["django_mpesa"]
omit = ["django_mpesa/testing/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
